fix: navbar/drawer visibilidad z-index

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ img {
   background: var(--color-secundario);
   position: sticky;
   top: 0;
-  z-index: 9999;
+  z-index: 999;
   width: 100%;
 }
 .logo {
